# ftgles

./: .gitignore  Makefile  README  config.h  config.status  ftgl.pc  libtool
demo/: Makefile
docs/: Makefile
msvc/: Makefile
src/: FTVectoriser.h  Makefile  Makefile.am
src/.deps/: libftgl_la-FTBitmapFont.Plo  libftgl_la-FTBitmapGlyph.Plo  libftgl_la-FTBuffer.Plo  libftgl_la-FTBufferFont.Plo  libftgl_la-FTBufferGlyph.Plo  libftgl_la-FTCharmap.Plo  libftgl_la-FTContour.Plo  libftgl_la-FTFace.Plo  libftgl_la-FTFont.Plo  libftgl_la-FTFontGlue.Plo  libftgl_la-FTGlyph.Plo  libftgl_la-FTGlyphContainer.Plo  libftgl_la-FTGlyphGlue.Plo  libftgl_la-FTLayout.Plo  libftgl_la-FTLayoutGlue.Plo  libftgl_la-FTLibrary.Plo  libftgl_la-FTOutlineFont.Plo  libftgl_la-FTOutlineGlyph.Plo  libftgl_la-FTPoint.Plo  libftgl_la-FTSimpleLayout.Plo  libftgl_la-FTSize.Plo  libftgl_la-FTTextureFont.Plo  libftgl_la-FTTextureGlyph.Plo  libftgl_la-FTVectoriser.Plo  libftgl_la-ftglesGlue.Plo
src/.libs/: libftgl.2.dylib  libftgl.lai
src/.libs/libftgl.2.dylib.dSYM/Contents/: Info.plist
src/.libs/libftgl.2.dylib.dSYM/Contents/Resources/DWARF/: libftgl.2.dylib
src/.svn/: all-wcprops  entries
src/.svn/text-base/: FTVectoriser.cpp.svn-base
src/FTFont/.svn/: all-wcprops  entries
src/FTFont/.svn/text-base/: FTFontGlue.cpp.svn-base
src/FTGL/: ftglesGlue.cpp
src/FTGL/.svn/: all-wcprops  entries
src/FTGL/.svn/text-base/: FTFont.h.svn-base  FTGlyph.h.svn-base  ftgles.h.svn-base  ftglesGlue.cpp.svn-base  ftglesGlue.h.svn-base
src/FTGlyph/: FTPolygonGlyph.cpp  FTTextureGlyph.cpp
src/FTGlyph/.svn/: all-wcprops  entries
src/FTGlyph/.svn/text-base/: FTGlyphGlue.cpp.svn-base
src/FTLayout/.svn/: all-wcprops  entries
test/: Makefile
